--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tailwindcss" : "npx tailwindcss -i ./public/css/style.css -o ./public/css/output.css --watch"
   },
   "author": "",
   "license": "MIT",
